Fixed overflow

--- a/css/index.css
+++ b/css/index.css
@@ -53,7 +53,6 @@ body {
 	position: absolute;
 	backface-visibility: hidden;
 	visibility: hidden;
-	overflow: hidden;
 	-webkit-backface-visibility: hidden;
 	-moz-backface-visibility: hidden;
 	backface-visibility: hidden;
